RegressionTests/TestSuiteExport/reject/continue_outside_loop.blade
// EXPECT: fail
// DIAGNOSTICS: E0208

fn helper() {
    continue;
}

cog task main() {
}